--- a/doc/config.yml
+++ b/doc/config.yml
@@ -1,13 +1,8 @@
 Content:
-    Stingray:
-        root_dir: ${ROOT_DIR}/doc/content
-    moose:
-        root_dir: ${MOOSE_DIR}/framework/doc/content
-        content:
-            - js/*
-            - css/*
-            - contrib/**
-            - media/**
+  - ${ROOT_DIR}/doc/content
+  - ${MOOSE_DIR}/framework/doc/content
+  - ${MOOSE_DIR}/modules/heat_conduction/doc/content
+  - ${MOOSE_DIR}/modules/ray_tracing/doc/content
 
 Renderer:
     type: MooseDocs.base.MaterializeRenderer
@@ -15,8 +10,16 @@ Renderer:
 Extensions:
     MooseDocs.extensions.navigation:
         name: Stingray
+        repo: https://github.com/hugary1995/stingray
+        menu: !include ${ROOT_DIR}/doc/menu.yml
     MooseDocs.extensions.appsyntax:
         executable: ${ROOT_DIR}
         remove: !include ${MOOSE_DIR}/framework/doc/remove.yml
         includes:
             - include
+    MooseDocs.extensions.sqa:
+      active: False
+    MooseDocs.extensions.common:
+      shortcuts:                     !include ${MOOSE_DIR}/framework/doc/globals.yml
+    MooseDocs.extensions.acronym:
+      acronyms:                      !include ${MOOSE_DIR}/framework/doc/acronyms.yml
