--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,17 +19,15 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Setup Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Install Conda environment with Micromamba
+        uses: mamba-org/provision-with-micromamba@main
         with:
-          mamba-version: "0.22"
-          activate-environment: moose
+          environment-file: false
+          environment-name: moose
           channels: conda-forge,https://conda.software.inl.gov/public
-
-      - name: Install dependencies
-        shell: bash -l {0}
-        run: |
-          mamba install moose-tools moose-libmesh
+          extra-specs: |
+            moose-tools
+            moose-libmesh
 
       - name: Compile EEL
         shell: bash -l {0}
